changes in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,11 @@
 {
   "name": "rediris-es/skin-sir2",
   "description": "SIR2 simpleSAMLphp theme",
+  "minimum-stability": "stable",
   "type": "simplesamlphp-module",
   "license": "LGPL-2.1",
-  "extra": {
-    "ssp-mixedcase-module-name": "skin-sir2"
-  },
+  "keywords": [ "simplesamlphp", "skin", "SIR2", "IdP" ],
   "require": {
     "simplesamlphp/composer-module-installer": "~1.0"
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/rediris-es/skin-sir2"
-    }
-  ]
+  }
 }
